--- a/frontend-pos/angular.json
+++ b/frontend-pos/angular.json
@@ -48,7 +48,13 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "frontend-pos/src/environments/environment.ts",
+                  "with": "frontend-pos/src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "buildOptimizer": false,
