--- a/frontend-pos/angular.json
+++ b/frontend-pos/angular.json
@@ -32,6 +32,7 @@
             "styles": [
               "src/styles.scss",
               "src/app/styles/buttons.scss",
+              "src/app/styles/material-form.scss",
               "src/app/styles/material-themes.scss"
             ],
             "scripts": []
@@ -103,6 +104,7 @@
             "styles": [
               "src/styles.scss",
               "src/app/styles/buttons.scss",
+              "src/app/styles/material-form.scss",
               "src/app/styles/material-themes.scss"
             ],
             "scripts": []
