--- a/frontend-pos/package.json
+++ b/frontend-pos/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ngx-translate/core": "^14.0.0",
+    "core-js": "^3.30.1",
     "material-icons": "^1.13.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
